# catfood

./: .gitignore  Cargo.toml  Dockerfile  build.rs  docker-compose.yaml
.github/workflows/: docker-image.yml
migrations/2024-07-22-084326_create_cat_food/: down.sql  up.sql
migrations/2024-07-31-092202_add_uers/: up.sql
src/: cli.rs  error.rs  main.rs  schema.rs
src/core/: assets.rs  home.rs  mod.rs
src/core/cat/: api.rs  food.rs  mod.rs  schema.rs  web.rs
src/core/users/: login.rs  mod.rs  mw_auth.rs  register.rs  user.rs
templates/: cat_food_add  cat_food_add.jinja  cat_food_describe  cat_food_describe.jinja  cat_food_edit.jinja  home.jinja  invalid_email  layout  layout.jinja  login  login_fail  register  user_exist
