[package]
name = "catfood"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "^0.7.0" }
clap = { version = "4.5.9", features = ["derive"] }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.2.2", features = ["postgres"] }
dotenvy = "0.15.7"
env_logger = "0.11.3"
log = "0.4.22"
minijinja = "2.1.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
ulid = "1.1.3"
