[package]
name = "catfood"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "^0.7.0" }
base64 = "0.22.1"
bcrypt = "0.15.1"
clap = { version = "4.5.9", features = ["derive"] }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.2.2", features = ["postgres"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15.7"
env_logger = "0.11.3"
hmac = "0.12.1"
jwt = "0.16.0"
log = "0.4.22"
mime_guess = "2.0.5"
minijinja = { version = "2.1.0" }
minijinja-embed = "2.1.1"
rust-embed = "8.5.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.10.8"
time = "0.3.36"
tokio = { version = "1.38.1", features = ["full"] }
tower-cookies = "0.10.0"
ulid = "1.1.3"

[build-dependencies]
minijinja-embed = "2.1.1"
